--- a/assets/stylesheets/components/_clients.scss
+++ b/assets/stylesheets/components/_clients.scss
@@ -25,10 +25,11 @@
     li {
       @include flexbox(flex, row, wrap, center, center);
       text-align: center;
+      max-width: 195px;
       transition: opacity .3s;
       
       img {
-        max-width: 195px;
+        max-width: 100%;
         height: auto;
       }
     }
